--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         </div>
     </div>
 
-    <script src="game.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
