--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
             </div>
             <div id="controls">
                 <div id="tower-selection">
-                    <button class="tower-button" data-type="gun" data-cost="50">Věž I (50)</button>
-                    <button class="tower-button" data-type="laser" data-cost="75">Věž II (75)</button>
-                    <button class="tower-button" data-type="sniper" data-cost="100">Věž III (100)</button>
+                    <button class="tower-button" data-type="gun" data-cost="50">Kulomet (50)</button>
+                    <button class="tower-button" data-type="laser" data-cost="75">Laser (75)</button>
+                    <button class="tower-button" data-type="sniper" data-cost="100">Odstřelovač (100)</button>
+                    <button class="tower-button" data-type="railgun" data-cost="80">Railgun (80)</button>
                 </div>
                 <button id="startWaveButton">Start Vlna</button>
             </div>
