--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <button id="cancel-selection-button">Cancel selection</button>
                     </div>
                 </div>
+                <div id="tower-help-text">Select a tower to upgrade</div>
             </div>
         </div>
         
