--- a/index.html
+++ b/index.html
@@ -85,27 +85,34 @@
                 <div id="wave-progress-text">Wave progress</div>
             </div>
             <div id="controls">
-                <div id="tower-selection">
-                    <button class="tower-button" data-type="gun" data-cost="50">
-                        <div class="tower-icon gun-icon"></div>
-                        <div class="tower-name">Machine Gun</div>
-                        <div class="tower-cost">50</div>
-                    </button>
-                    <button class="tower-button" data-type="laser" data-cost="75">
-                        <div class="tower-icon laser-icon"></div>
-                        <div class="tower-name">Laser</div>
-                        <div class="tower-cost">75</div>
-                    </button>
-                    <button class="tower-button" data-type="sniper" data-cost="100">
-                        <div class="tower-icon sniper-icon"></div>
-                        <div class="tower-name">Sniper</div>
-                        <div class="tower-cost">100</div>
-                    </button>
-                    <button class="tower-button" data-type="railgun" data-cost="110">
-                        <div class="tower-icon railgun-icon"></div>
-                        <div class="tower-name">Railgun</div>
-                        <div class="tower-cost">110</div>
-                    </button>
+                <div id="tower-selection-wrapper">
+                    <div id="tower-selection">
+                        <button class="tower-button" data-type="gun" data-cost="50">
+                            <div class="tower-icon gun-icon"></div>
+                            <div class="tower-name">Machine Gun</div>
+                            <div class="tower-cost">50</div>
+                        </button>
+                        <button class="tower-button" data-type="laser" data-cost="75">
+                            <div class="tower-icon laser-icon"></div>
+                            <div class="tower-name">Laser</div>
+                            <div class="tower-cost">75</div>
+                        </button>
+                        <button class="tower-button" data-type="sniper" data-cost="100">
+                            <div class="tower-icon sniper-icon"></div>
+                            <div class="tower-name">Sniper</div>
+                            <div class="tower-cost">100</div>
+                        </button>
+                        <button class="tower-button" data-type="railgun" data-cost="110">
+                            <div class="tower-icon railgun-icon"></div>
+                            <div class="tower-name">Railgun</div>
+                            <div class="tower-cost">110</div>
+                        </button>
+                        <button class="tower-button" data-type="freezer" data-cost="90">
+                            <div class="tower-icon freezer-icon"></div>
+                            <div class="tower-name">Freezer</div>
+                            <div class="tower-cost">90</div>
+                        </button>
+                    </div>
                 </div>
                 <button id="startWaveButton"><i class="fas fa-play"></i> Start Wave</button>
             </div>
