--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
                             <div class="tower-name">Freezer</div>
                             <div class="tower-cost">130</div>
                         </button>
+                        <button class="tower-button" data-type="pulsar" data-cost="300">
+                            <div class="tower-icon pulsar-icon"></div>
+                            <div class="tower-name">Pulsar</div>
+                            <div class="tower-cost">300</div>
+                        </button>
                     </div>
                 </div>
                 <button id="startWaveButton"><i class="fas fa-play"></i> Start Wave</button>
