--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <h3>Map Settings</h3>
                     <div class="form-group">
                         <label for="map-name">Map Name:</label>
-                        <input type="text" id="map-name" placeholder="Enter map name">
+                        <input style="width: 200px;" type="text" id="map-name" placeholder="Enter map name">
                     </div>
                     <div class="form-group">
                         <label for="difficulty-select">Difficulty:</label>
