--- a/index.html
+++ b/index.html
@@ -366,12 +366,35 @@
                         <input style="width: 200px;" type="text" id="map-name" placeholder="Enter map name">
                     </div>
                     <div class="form-group">
-                        <label for="difficulty-select">Difficulty:</label>
+                        <label for="difficulty-select">Difficulty Preset:</label>
                         <select id="difficulty-select">
                             <option value="easy">Easy</option>
                             <option value="medium" selected>Medium</option>
                             <option value="hard">Hard</option>
+                            <option value="custom">Custom</option>
                         </select>
+                    </div>
+                    
+                    <div id="custom-params" class="custom-params">
+                        <h4>Custom Parameters:</h4>
+                        <div class="form-group">
+                            <label for="start-money">Starting Money:</label>
+                            <input type="number" id="start-money" min="50" max="300" value="100">
+                        </div>
+                        <div class="form-group">
+                            <label for="start-health">Starting Health:</label>
+                            <input type="number" id="start-health" min="5" max="50" value="20">
+                        </div>
+                        <div class="form-group">
+                            <label for="enemy-health-modifier">Enemy Health Modifier:</label>
+                            <input type="range" id="enemy-health-modifier" min="0.5" max="2.0" step="0.1" value="1.0">
+                            <span id="enemy-health-value">1.0</span>
+                        </div>
+                        <div class="form-group">
+                            <label for="wave-modifier">Wave Modifier:</label>
+                            <input type="range" id="wave-modifier" min="0.5" max="2.0" step="0.1" value="1.0">
+                            <span id="wave-modifier-value">1.0</span>
+                        </div>
                     </div>
                 </div>
                 
