--- a/index.html
+++ b/index.html
@@ -339,6 +339,14 @@
             <p>You completed all waves!</p>
             <button id="retry-button">Play Again</button>
         </div>
+        <!-- Victory screen -->
+        <div id="victory-screen" class="game-overlay">
+            <div class="game-overlay-content">
+                <h2>Victory!</h2>
+                <p>Congratulations, you have successfully defended against all <span id="victory-wave-count">20</span> waves!</p>
+                <button class="play-again-button">Play Again</button>
+            </div>
+        </div>
     </div>
 
     <!-- Map Editor UI -->
@@ -394,6 +402,11 @@
                             <label for="wave-modifier">Wave Modifier:</label>
                             <input type="range" id="wave-modifier" min="0.5" max="2.0" step="0.1" value="1.0">
                             <span id="wave-modifier-value">1.0</span>
+                        </div>
+                        <div class="form-group">
+                            <label for="max-waves">Max Waves:</label>
+                            <input type="number" id="max-waves" min="20" max="40" value="20">
+                            <span class="input-note">Between 20-40 waves</span>
                         </div>
                     </div>
                 </div>
