--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
                             </p>
                         </div>
                     </div>
+                    
+                    <!-- Devastator -->
+                    <div class="tower-guide-item">
+                        <div class="tower-guide-icon devastator-icon"></div>
+                        <div class="tower-guide-info">
+                            <h3>Devastator</h3>
+                            <p class="tower-cost-info">Cost: 600</p>
+                            <p>Ultimate late-game tower with multi-barrel design and explosive rounds. Perfect replacement for Machine Gun towers in late waves.</p>
+                            <p class="tower-upgrades">
+                                <strong>Level 1:</strong> Multi Barrel (3 projectiles) and Explosive Area damage<br>
+                                <strong>Level 2:</strong> Improved explosion radius and armor piercing capabilities<br>
+                                <strong>Level 3:</strong> Maximum explosive damage with devastating critical hits
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="tower-guide-tips">
@@ -171,6 +186,7 @@
                                 <li><kbd>4</kbd> - Select Railgun</li>
                                 <li><kbd>5</kbd> - Select Freezer</li>
                                 <li><kbd>6</kbd> - Select Pulsar</li>
+                                <li><kbd>7</kbd> - Select Devastator</li>
                             </ul>
                         </div>
                         <div class="shortcuts-column">
@@ -318,6 +334,12 @@
                             <div class="tower-icon pulsar-icon"></div>
                             <div class="tower-name">Pulsar</div>
                             <div class="tower-cost">300</div>
+                        </button>
+                        <button class="tower-button" data-type="devastator" data-cost="600">
+                            <div class="tower-hotkey">7</div>
+                            <div class="tower-icon devastator-icon"></div>
+                            <div class="tower-name">Devastator</div>
+                            <div class="tower-cost">600</div>
                         </button>
                     </div>
                 </div>
