--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                     <input type="text" id="nickname-input" placeholder="Enter your nickname" maxlength="20">
                     <div id="nickname-error" class="error-message"></div>
                 </div>
-                <button id="save-nickname-btn" class="primary-btn">Start Playing</button>
+                <button id="save-nickname-btn" class="primary-btn"><i class="fas fa-play"></i> Start Playing</button>
             </div>
         </div>
     </div>
