--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                         <select id="sort-maps">
                             <option value="created_at">Newest</option>
                             <option value="average_rating">Rating</option>
+                            <option value="play_count">Plays</option>
                             <option value="name">Name</option>
                         </select>
                         <button id="sort-direction" class="sort-btn" title="Toggle sort direction">
